This changelog documents the evolution of org-re-reveal starting with
version [[*\[1.1.11\] - 2019-08-19][1.1.11]], created on 2019-08-19,
based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
Version numbers starting with version 2.0.0 adhere to
[[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

Older changes are summarized in subsequent sections.

** [Unreleased]

** [3.25.1] - 2024-01-03
*** Fixed
    - Respect audio-name also on notes for title slide; related to
      issue #97.

** [3.25.0] - 2024-01-02
*** Added
    - Allow a ~notes~ block before the first headline to define notes
      for the title slide.  Thus, ~org-re-reveal-title-slide-notes~
      and the accompanying %n escape sequence are no longer necessary
      (but still supported).
      - Addresses issue #97.
*** Changed
    - Declare ~org-re-reveal-title-slide-notes~ obsolete.

** [3.24.3] - 2024-01-01
*** Fixed
    - Fix TTS numbering with splits, issue #95.

** [3.24.2] - 2023-12-31
*** Fixed
    - Fix TTS numbering without title slide, issue #94.

** [3.24.1] - 2023-12-27
*** Fixed
    - Allow ~num:nil~ with TTS and user-specified audio names, but
      raise user-error without audio names.  Improve doc string for
      ~org-re-reveal-with-tts~.  Addresses issue #93.
    - Turn some occurrences of ~error~ into ~user-error~.

** [3.24.0] - 2023-11-28
*** Added
    - Keyword ~REVEAL_VIEWPORT~ with variable ~org-re-reveal-viewport~.

** [3.23.1] - 2023-11-23
*** Fixed
    - Also use ~div~ elements for multiplex client presentations.

** [3.23.0] - 2023-09-25
*** Added
    - Option ~reveal_show_notes~ with variable ~org-re-reveal-show-notes~.

** [3.22.0] - 2023-09-25
*** Added
    - Keyword ~REVEAL_TDM_RESERVATION~ with variable
      ~org-re-reveal-tdm-reservation~.

** [3.21.0] - 2023-09-07
*** Added
    - Keywords ~REVEAL_TTS_START_SLIDE_GAP~ and
      ~REVEAL_TTS_END_SLIDE_GAP~ with variables
      ~org-re-reveal-tts-start-slide-gap~ and