@@ -12,6 +12,9 @@ Version numbers starting with version 2.0.0 adhere to
 Older changes are summarized in subsequent sections.
 
 ** [Unreleased]
+*** Added
+    - Keyword ~REVEAL_MULTIPLEX_JS_URL~ with variable
+      ~org-re-reveal-multiplex-js-url~; addresses issue #98.
 
 ** [3.25.1] - 2024-01-03
 *** Fixed
